Added hasAchievement, and tried to do mint but failed.
